Use StandardCharsets.UTF_8: remove usage of try catch blocks for UnsupportedEncodingException because it is never thrown if StandardCharsets class is used; Align encoding constants with java constants in StandardCharset class